# Duke4

./: README.md  devcmd_vc6.cmd
Duke4/: .gitignore  CMakeLists.txt
Duke4/ALAudio/Inc/: ALAudioBuild.h  ALAudioSubsystem.h
Duke4/ALAudio/Lib/: ALURE32-static.lib  FLAC.lib  FLACd.lib  OpenAL32.lib  OpenAL32d.lib  libxmp.lib  libxmpd.lib  mpg123.lib  mpg123d.lib  ogg.lib  oggd.lib  sndfile.lib  sndfiled.lib  vorbis.lib  vorbisd.lib  vorbisenc.lib  vorbisencd.lib  vorbisfile.lib  vorbisfiled.lib
Duke4/ALAudio/Src/: ALAudioSoundInstance.cpp  ALAudioSubsystem.cpp  CMakeLists.txt
Duke4/Cannibal/: CpjLod.cpp  StrMain.cpp
Duke4/CannibalEditor/: cbl_defs.h  sys_main.cpp
Duke4/Core/Inc/: Core.h  UnMath.h  UnObjBas.h  UnThreadingBase.h  UnThreadingWindows.h  UnVcWin32.h
Duke4/Core/Src/: UnLinker.cpp  UnMisc.cpp  UnVcWin32.cpp
Duke4/D3DDrv/Src/: Direct3D8.cpp
Duke4/DukeEd/Inc/: DlgBevel.h  DlgBuildOptions.h  TwoDeeShapeEditor.h
Duke4/DukeEd/Src/: Main.cpp
Duke4/Engine/Classes/: Actor.uc  TriggerSpawn.uc
Duke4/Engine/Inc/: ASoftParticleSystem.h  UnAudio.h  UnPrim.h  UnRenDev.h
Duke4/Engine/Src/: ASoftParticleSystem.cpp  Engine.cpp  UnAudio.cpp  UnLevAct.cpp  UnPrim.cpp
Duke4/GlideDrv/Src/: CMakeLists.txt  UnGlide.cpp
Duke4/Render/Src/: UnLight.cpp  UnRender.cpp
Duke4/SoftDrv/Src/: DrawPoly.cpp  SoftDrvPrivate.h
Duke4/WinDrv/Src/: WinViewport.cpp
Duke4/Window/Inc/: Window.h
Duke4/dnAI/Classes/: CornerPoint.uc  HumanNPC.uc
Duke4/dnGame/Classes/: dnDriveableDecoration.uc
